[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/VoxelCore/src/components.gui/VoxelViewer/VoxelViewer.gd" type="Script" id=1]

[node name="VoxelViewer" type="ColorRect"]
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Voxel's data!

Left Click   : select voxel
Right Click : unselect voxel"
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 1 )

[node name="VoxelColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
rect_min_size = Vector2( 30, 30 )
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_focus_exited"]
